<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/order_fragment"
    tools:context=".presentation.orderFragment.OrderFragment">

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/tv_total_price"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_top"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        app:errorEnabled="true"
        app:endIconMode="clear_text"
        app:boxStrokeColor="@color/gray_light"
        app:hintTextColor="@color/gray_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/guideline_top">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_textfield_hint"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:textColor="@color/white"
            tools:text="Name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_phone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        app:errorEnabled="true"
        app:endIconMode="clear_text"
        app:prefixText="+7"
        app:prefixTextColor="@color/white"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:counterTextColor="@color/white"
        app:boxStrokeColor="@color/gray_light"
        app:hintTextColor="@color/gray_light"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/input_layout_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_textfield_hint"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:selectAllOnFocus="true"
            android:textColor="@color/white"
            tools:text="Phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        app:endIconMode="clear_text"
        app:boxStrokeColor="@color/gray_light"
        app:hintTextColor="@color/gray_light"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/input_layout_phone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_order_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_textfield_hint"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions"
            android:selectAllOnFocus="true"
            android:text="Любимой доченке, приятного аппетита))"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_towns"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:tooltipText=""
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/input_layout_title" />

    <TextView
        android:id="@+id/tv_delivery_cost"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/tv_delivery_cost"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/input_layout_street"
        app:layout_constraintStart_toEndOf="@+id/spinner_towns"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_street"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:endIconMode="clear_text"
        android:textColor="@color/white"
        app:boxStrokeColor="@color/gray_light"
        app:hintTextColor="@color/gray_light"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/spinner_towns">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/street_textfield_hint"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:textColor="@color/white"
            tools:text="Street" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_house"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        app:endIconMode="clear_text"
        app:boxStrokeColor="@color/gray_light"
        app:hintTextColor="@color/gray_light"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/input_layout_street">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_housenum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/housenumber_textfield_hint"
            android:textColor="@color/white"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:selectAllOnFocus="true"
            tools:text="#house" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_flat"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:endIconMode="clear_text"
        app:boxStrokeColor="@color/gray_light"
        app:hintTextColor="@color/gray_light"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/input_layout_house">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_flatnum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/flatnumber_textfield_hint"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:textColor="@color/white"
            tools:text="Flat NUmber" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_order"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginBottom="28dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/guideline_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />


</androidx.constraintlayout.widget.ConstraintLayout>